Documentation for v1.0.0 (#127)
